# HTTP-server-in-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: file.c  http.c  logger.c  main.c  requests.c  responses.c  socket_factory.c
src/includes/: file.h  http.h  logger.h  requests.h  responses.h  socket_factory.h
